feat: init webflow utils with tsup

--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
-  "name": "z-wf-starter",
-  "description": "Starter template that I use for all my Webflow projects.",
+  "name": "@taj-wf/utils",
+  "description": "Some useful TypeScript utilities I regularly use when working with Webflow.",
+  "version": "1.0.0",
   "license": "ISC",
   "keywords": [],
   "type": "module",
-  "main": "src/index.ts",
-  "module": "src/index.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    },
+    "./*": {
+      "types": "./dist/modules/*.d.ts",
+      "import": "./dist/modules/*.js",
+      "default": "./dist/modules/*.js"
+    }
+  },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node ./bin/build.js",
-    "build": "cross-env NODE_ENV=production node ./bin/build.js",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "lint": "eslint ./src && prettier --check ./src",
     "lint:fix": "eslint ./src --fix",
     "check": "tsc --noEmit",
@@ -37,6 +54,7 @@
     "husky": "^9.1.7",
     "prettier": "^3.4.2",
     "release-it": "^19.0.3",
+    "tsup": "^8.5.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0"
   },
@@ -45,6 +63,5 @@
   },
   "engines": {
     "pnpm": ">=10"
-  },
-  "version": "1.0.0"
+  }
 }
