--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "typescript-eslint": "^8.23.0"
   },
   "dependencies": {
-    "@finsweet/ts-utils": "^0.40.0"
+    "@finsweet/ts-utils": "^0.40.0",
+    "gsap": "^3.13.0"
   },
   "engines": {
     "pnpm": ">=10"
