fix: make sure tsdoc comments are not removed in output .d.ts files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["@finsweet/ts-utils"]
+    "types": ["@finsweet/ts-utils"],
+    "removeComments": false
   }
 }
